some more UI cleanup

--- a/DFOptimizerApp/app/src/main/res/layout/activity_choose_site.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_choose_site.xml
@@ -4,45 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="@drawable/gradient"
     tools:context=".ChooseSport">
+
 
     <Button
         android:id="@+id/draftKingsBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="315dp"
-        android:textColor="#333333"
+        android:layout_width="329dp"
+        android:layout_height="77dp"
+        android:layout_marginBottom="324dp"
+        android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#4ab9f5"
+        android:fontFamily="@font/klaptbold"
         android:text="DraftKings"
+        android:textColor="#333333"
+        android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/fanDuelBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#333333"
+        android:layout_width="329dp"
+        android:layout_height="77dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginBottom="52dp"
+        android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#4ab9f5"
-        android:layout_marginStart="9dp"
-        android:layout_marginLeft="9dp"
-        android:layout_marginBottom="64dp"
+        android:fontFamily="@font/klaptbold"
         android:text="FanDuel"
+        android:textColor="#333333"
+        android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/draftKingsBtn"
         app:layout_constraintStart_toStartOf="@+id/draftKingsBtn" />
 
     <Button
         android:id="@+id/logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginBottom="152dp"
-        android:textColor="#333333"
+        android:layout_width="128dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginLeft="96dp"
+        android:layout_marginBottom="132dp"
         android:backgroundTint="#4ab9f5"
+        android:textSize="16sp"
+        android:fontFamily="@font/klaptbold"
+        android:background="@drawable/custom_rounded_corners"
         android:onClick="logout"
         android:text="Logout"
+        android:textColor="#333333"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/draftKingsBtn" />
 
