--- a/DFOptimizerApp/app/src/main/res/layout/activity_display_lineups.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_display_lineups.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="@drawable/gradient"
     tools:context=".DisplayLineups"
     android:orientation="vertical"
     tools:layout_editor_absoluteX="0dp"
@@ -29,8 +29,8 @@
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="72dp"
