--- a/DFOptimizerApp/app/src/main/res/layout/activity_register.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_register.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/gradient"
     android:layout_height="match_parent"
     tools:context=".Register">
 
@@ -13,6 +14,7 @@
         android:layout_height="38dp"
         android:layout_marginBottom="27dp"
         android:text="Email Address"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,13 +22,17 @@
 
     <TextView
         android:id="@+id/createText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="39dp"
-        android:layout_marginLeft="39dp"
+        android:layout_width="252dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="12dp"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="50dp"
+        android:fontFamily="@font/klaptbold"
         android:text="Create New Account"
+
+        android:textColor="#ffffff"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/fullName_register"
         app:layout_constraintStart_toStartOf="@+id/fullName_register"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,7 +45,9 @@
         android:layout_marginLeft="84dp"
         android:layout_marginBottom="23dp"
         android:ems="10"
+        android:textColor="#ffffff"
         android:inputType="textPersonName"
+        android:backgroundTint="#ffffff"
         android:text=""
         app:layout_constraintBottom_toTopOf="@+id/emailAddressTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,8 +61,10 @@
         android:layout_marginLeft="84dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
+        android:textColor="#ffffff"
         android:ems="10"
         android:inputType="textPersonName"
+        android:backgroundTint="#ffffff"
         android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/emailAddressTextView"
         app:layout_constraintEnd_toEndOf="@+id/emailAddressTextView"
@@ -71,6 +81,8 @@
         android:layout_marginRight="4dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:textColor="#ffffff"
+        android:backgroundTint="#ffffff"
         android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/passwordTextView"
         app:layout_constraintEnd_toEndOf="@+id/passwordTextView"
@@ -88,6 +100,8 @@
         android:layout_marginRight="4dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:backgroundTint="#ffffff"
+        android:textColor="#ffffff"
         android:text=""
         app:layout_constraintEnd_toEndOf="@+id/confirmPasswordTextView"
         app:layout_constraintHorizontal_bias="1.0"
@@ -96,10 +110,14 @@
 
     <Button
         android:id="@+id/registerBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="169dp"
+        android:layout_height="56dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/custom_rounded_corners"
+        android:backgroundTint="#4ab9f5"
         android:text="Register"
+        android:fontFamily="@font/klaptbold"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/existingUser"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +128,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="92dp"
+        android:textColor="#ffffff"
         android:text="Already Registered? Login Here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,6 +144,7 @@
         android:layout_marginRight="32dp"
         android:layout_marginBottom="49dp"
         android:text="Full Name"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/emailAddressTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -138,6 +158,7 @@
         android:layout_height="33dp"
         android:layout_marginBottom="17dp"
         android:text="Password"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/confirmPasswordTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,6 +170,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="24dp"
         android:text="Confirm Password"
+        android:textColor="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
