--- a/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/gradient"
+    android:background="#333333"
     android:layout_height="match_parent">
 
 
@@ -49,7 +49,7 @@
         android:layout_width="403dp"
         android:layout_height="360dp"
         android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="39dp"
@@ -115,6 +115,8 @@
         android:layout_marginEnd="44dp"
         android:layout_marginRight="44dp"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="#333333"
+        android:theme="@style/spinnerTheme"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
