--- a/DFOptimizerApp/app/src/main/res/values/colors.xml
+++ b/DFOptimizerApp/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#555555</color>
     <color name="lime_yellow">#FFFFEE</color>
     <color name="gray">#333333</color>
+    <color name="white">#ffffff</color>
 </resources>
