--- a/DFOptimizerApp/app/src/main/res/values/styles.xml
+++ b/DFOptimizerApp/app/src/main/res/values/styles.xml
@@ -5,6 +5,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">#333333</item>
     </style>
+
+    <style name="spinnerTheme">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 
 </resources>
