styling almost complete on list player page

--- a/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_list_players.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#333333"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="#333333">
 
 
     <TextView
@@ -18,8 +17,8 @@
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="19dp"
-        android:textColor="#ffffff"
         android:text="Here are the players who are available today. Choose any four that you would like to include in your lineup."
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/remainingSalaryTxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -35,9 +34,9 @@
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="40dp"
-        android:text="Continue"
-        android:backgroundTint="#4ab9f5"
         android:background="@drawable/custom_rounded_corners"
+        android:backgroundTint="#4ab9f5"
+        android:text="Continue"
         android:textColor="#333333"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/clearPlayers"
@@ -46,10 +45,10 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="403dp"
+        android:layout_width="405dp"
         android:layout_height="360dp"
         android:layout_marginStart="4dp"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="39dp"
@@ -62,14 +61,14 @@
             android:id="@+id/playerListView"
             android:layout_width="403dp"
             android:layout_height="360dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="24dp"
+            android:clickable="true"
             android:scrollbars="vertical"
             android:stretchColumns="*"
-            android:clickable="true"
             app:layout_constraintBottom_toTopOf="@+id/continueBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -116,6 +115,7 @@
         android:layout_marginRight="44dp"
         android:layout_marginBottom="8dp"
         android:backgroundTint="#333333"
+        android:textColor="@color/white"
         android:theme="@style/spinnerTheme"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/scrollView2"
@@ -129,9 +129,9 @@
         android:layout_height="47dp"
         android:layout_marginEnd="78dp"
         android:layout_marginRight="78dp"
-        android:text="Clear All"
-        android:backgroundTint="#4ab9f5"
         android:background="@drawable/custom_rounded_corners"
+        android:backgroundTint="#4ab9f5"
+        android:text="Clear All"
         android:textColor="#333333"
         app:layout_constraintBaseline_toBaselineOf="@+id/continueBtn"
         app:layout_constraintEnd_toEndOf="parent"
