--- a/DFOptimizerApp/app/src/main/res/values/styles.xml
+++ b/DFOptimizerApp/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
 
     <style name="spinnerTheme">
         <item name="android:textColor">@color/white</item>
+        <item name="android:colorBackground">@color/gray</item>
     </style>
 
 
