Displaying more than one lineup now. Also made the "number of lineups" a dropdown menu rather than a text view

--- a/DFOptimizerApp/app/src/main/res/layout/activity_display_lineups.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_display_lineups.xml
@@ -13,22 +13,27 @@
 
     <Button
         android:id="@+id/save"
-        android:layout_width="259dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="94dp"
+        android:layout_width="242dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginRight="76dp"
+        android:layout_marginBottom="80dp"
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#4ab9f5"
         android:text="Save Lineup"
         android:textColor="#333333"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.764"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
         android:id="@+id/httpBut"
-        android:layout_width="222dp"
-        android:layout_height="43dp"
+        android:layout_width="250dp"
+        android:layout_height="53dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#4ab9f5"
@@ -45,13 +50,14 @@
         android:layout_height="0dp"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
         android:layout_marginBottom="23dp"
         android:text="View Optimized Lineup Here"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/httpBut" />
 
@@ -59,29 +65,29 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="9dp"
+        android:layout_marginLeft="9dp"
         android:layout_marginTop="82dp"
-        android:layout_marginBottom="37dp"
+        android:layout_marginBottom="31dp"
         android:text="How many lineups would you like to generate?"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toTopOf="@+id/numberOfLineups"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/numberOfLineups"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <Spinner
         android:id="@+id/numberOfLineups"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="14dp"
-        android:backgroundTint="#ffffff"
-        android:ems="10"
-        android:inputType="number"
-        android:text="1"
-        android:textColor="#ffffff"
+        android:layout_width="309dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginLeft="47dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginRight="47dp"
+        android:layout_marginBottom="20dp"
+        android:spinnerMode="dropdown"
         app:layout_constraintBottom_toTopOf="@+id/httpBut"
-        app:layout_constraintStart_toStartOf="@+id/httpBut"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
