--- a/DFOptimizerApp/app/src/main/res/layout/activity_saved_lineups.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_saved_lineups.xml
@@ -36,6 +36,7 @@
         android:backgroundTint="#ffffff"
         android:textColor="@color/white"
         android:theme="@style/spinnerTheme"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +58,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/btnToSave"
+        android:id="@+id/btnToDisplay"
         android:layout_width="96dp"
         android:layout_height="50dp"
         android:layout_marginTop="134dp"
@@ -88,10 +89,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnToSave" />
+        app:layout_constraintTop_toBottomOf="@+id/btnToDisplay" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/goToHome"
         android:layout_width="120dp"
         android:layout_height="50dp"
         android:layout_marginStart="149dp"
