--- a/DFOptimizerApp/app/src/main/res/layout/activity_display_lineups.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_display_lineups.xml
@@ -13,12 +13,8 @@
 
     <Button
         android:id="@+id/save"
-        android:layout_width="242dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginLeft="76dp"
-        android:layout_marginEnd="76dp"
-        android:layout_marginRight="76dp"
+        android:layout_width="148dp"
+        android:layout_height="75dp"
         android:layout_marginBottom="80dp"
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#4ab9f5"
@@ -26,47 +22,29 @@
         android:textColor="#333333"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.764"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/lineupScrollView" />
 
     <Button
         android:id="@+id/httpBut"
-        android:layout_width="250dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="225dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="1dp"
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#4ab9f5"
         android:text="Generate Optimized Lineup"
         android:textColor="#333333"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintBottom_toTopOf="@+id/lineupScrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numberOfLineups" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="23dp"
-        android:text="View Optimized Lineup Here"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/save"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/httpBut" />
-
-    <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
-        android:layout_marginLeft="9dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="82dp"
         android:layout_marginBottom="31dp"
         android:text="How many lineups would you like to generate?"
@@ -77,18 +55,99 @@
 
     <Spinner
         android:id="@+id/numberOfLineups"
-        android:layout_width="309dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="47dp"
-        android:layout_marginLeft="47dp"
-        android:layout_marginEnd="47dp"
-        android:layout_marginRight="47dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="306dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="51dp"
+        android:layout_marginLeft="51dp"
+        android:layout_marginEnd="51dp"
+        android:layout_marginRight="51dp"
         android:spinnerMode="dropdown"
         app:layout_constraintBottom_toTopOf="@+id/httpBut"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+    <ScrollView
+        android:id="@+id/lineupScrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/save"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/httpBut">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Spinner
+                android:id="@+id/lineup1"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone" />
+
+            <Spinner
+                android:id="@+id/lineup2"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone" />
+
+            <Spinner
+                android:id="@+id/lineup3"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone" />
+
+            <Spinner
+                android:id="@+id/lineup4"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone"/>
+
+            <Spinner
+                android:id="@+id/lineup5"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone"/>
+
+            <Spinner
+                android:id="@+id/lineup6"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone" />
+
+            <Spinner
+                android:id="@+id/lineup7"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone" />
+
+            <Spinner
+                android:id="@+id/lineup8"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone" />
+
+            <Spinner
+                android:id="@+id/lineup9"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone" />
+
+            <Spinner
+                android:id="@+id/lineup10"
+                android:layout_width="410dp"
+                android:layout_height="100dp"
+                android:visibility="gone" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
