--- a/DFOptimizerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -9,15 +9,14 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_width="270dp"
+        android:layout_height="75dp"
         android:layout_marginStart="54dp"
         android:layout_marginLeft="54dp"
         android:layout_marginTop="45dp"
         android:layout_marginEnd="54dp"
         android:layout_marginRight="54dp"
-        android:layout_marginBottom="36dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,9 +24,13 @@
 
     <Button
         android:id="@+id/customizeBtn"
-        android:layout_width="298dp"
-        android:layout_height="89dp"
-        android:layout_marginBottom="92dp"
+        android:layout_width="220dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="56dp"
+        android:layout_marginLeft="56dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginRight="56dp"
+        android:layout_marginBottom="70dp"
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#4ab9f5"
         android:fontFamily="@font/klaptbold"
@@ -36,75 +39,109 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="161dp"
-        android:text="NBA Lineup:"
-        android:textColor="#4ab9f5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="NFL Lineup:"
-        android:textColor="#4ab9f5"
-        app:layout_constraintStart_toStartOf="@+id/nflLineupTxtView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginLeft="22dp"
-        android:layout_marginBottom="311dp"
-        android:text=" MLB Lineup:"
-        android:textColor="#4ab9f5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/mlbLineupTxtView" />
-
-    <TextView
-        android:id="@+id/nbaLineupTxtView"
+    <ScrollView
+        android:id="@+id/scrollView3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="@+id/nflLineupTxtView"
-        app:layout_constraintEnd_toStartOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/nflLineupTxtView" />
-
-    <TextView
-        android:id="@+id/nflLineupTxtView"
-        android:layout_width="125dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="41dp"
-        android:layout_marginRight="41dp"
-        android:layout_marginBottom="20dp"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/textView7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView6" />
-
-    <TextView
-        android:id="@+id/mlbLineupTxtView"
-        android:layout_width="125dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginBottom="31dp"
-        android:textColor="#ffffff"
+        android:layout_marginBottom="7dp"
         app:layout_constraintBottom_toTopOf="@+id/customizeBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="NBA Lineup - DraftKings:"
+                android:textColor="#4ab9f5"
+                tools:layout_editor_absoluteX="40dp"
+                tools:layout_editor_absoluteY="161dp" />
+
+            <Spinner
+                android:id="@+id/nba_dk_lineup"
+                android:layout_width="410dp"
+                android:layout_height="100dp" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" NBA Lineup - FanDuel:"
+                android:textColor="#4ab9f5"
+                tools:layout_editor_absoluteX="40dp"
+                tools:layout_editor_absoluteY="309dp" />
+
+            <Spinner
+                android:id="@+id/nba_fd_lineup"
+                android:layout_width="410dp"
+                android:layout_height="100dp" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="NFL Lineup - DraftKings:"
+                android:textColor="#4ab9f5"
+                tools:layout_editor_absoluteX="40dp"
+                tools:layout_editor_absoluteY="227dp" />
+
+            <Spinner
+                android:id="@+id/nfl_dk_lineup"
+                android:layout_width="410dp"
+                android:layout_height="100dp" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" NFL Lineup - FanDuel:"
+                android:textColor="#4ab9f5"
+                tools:layout_editor_absoluteX="40dp"
+                tools:layout_editor_absoluteY="309dp" />
+
+            <Spinner
+                android:id="@+id/nfl_fd_lineup"
+                android:layout_width="410dp"
+                android:layout_height="100dp" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" MLB Lineup - DraftKings:"
+                android:textColor="#4ab9f5"
+                tools:layout_editor_absoluteX="40dp"
+                tools:layout_editor_absoluteY="309dp" />
+
+            <Spinner
+                android:id="@+id/mlb_dk_lineup"
+                android:layout_width="410dp"
+                android:layout_height="100dp" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" MLB Lineup - FanDuel:"
+                android:textColor="#4ab9f5"
+                tools:layout_editor_absoluteX="40dp"
+                tools:layout_editor_absoluteY="309dp" />
+
+            <Spinner
+                android:id="@+id/mlb_fd_lineup"
+                android:layout_width="410dp"
+                android:layout_height="100dp" />
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
